--- a/src/components/SingleOrder.css
+++ b/src/components/SingleOrder.css
@@ -21,7 +21,7 @@
 .item_list {
     display:flex;
     flex-direction: column;
-    width: 90%;
+    width: 100%;
     align-items: center;
 }
 
@@ -31,13 +31,15 @@
     align-items: center;
     border-bottom: 1px solid #e2e3e4;
     height: 150px;
+    width: 100%;
+    overflow: hidden;
 }
 
 .order_list_image {
     width: 30%;
 }
 .checkout_product_image>img{
-    width: 80%;
+   max-height:130px;
 }
 
 .checkout_product_info{
